2002-02-11  Sam Steingold  <sds@gnu.org>

	fixed the (compile nil (lambda () (flet (())))) bug
	* compiler.lisp (symbol-suffix): use just the suffix for NIL funname

2002-02-5  Sam Steingold  <sds@gnu.org>

	* foreign1.lisp, affi1.lisp: moved *FOREIGN-ENCODING* to the
	CUSTOM package, as described in the impnotes

2002-02-09  Sam Steingold  <sds@gnu.org>

	* makemake.in: include impnotes.css in the distribution along
	with impnotes.html

2002-02-03  Sam Steingold  <sds@gnu.org>

	fixed a bug: (defmethod foo ((x (eql 1))) x)
	* package.d (CHECK-PACKAGE-LOCK): handle non-package third
	argument to mean "unlocked"
	* init.lisp (check-redefinition): (EQL X): when X is not a
	symbol, pass NIL as the package

2002-02-01  Sam Steingold  <sds@gnu.org>

	* spvw_update.d (update_weakpointer): new macro
	(update_weakpointers, update_weakpointers_mod): use it

2002-02-01  Sam Steingold  <sds@gnu.org>

	* io.d (pr_array_nil): print array address too
	(pr_hex6_obj): save the object
	(pr_orecord): print HASH-TABLE with TEST and COUNT
	even when *PRINT-ARRAY* is NIL
	* constobj.d (printstring_hash_table): removed

2002-01-31  Sam Steingold  <sds@gnu.org>

	* lispbibl.d (hashtable_test): new macro
	* io.d (pr_orecord): use it
	* hashtable.d (HASH-TABLE-TEST): ditto

2002-01-31  Sam Steingold  <sds@gnu.org>

	* record.d (mk_weakpointer): new local helper function
	(allocate_weakpointer): new global function, uses mk_weakpointer()
	(MAKE-WEAK-POINTER): use mk_weakpointer()
	* lispbibl.d (allocate_weakpointer): declare as function, not macro
	(weakpointer_broken_p): new macro
	* io.d (pr_orecord): use it

2002-01-30  Sam Steingold  <sds@gnu.org>

	* io.d (pr_orecord): print EQUALP hash tables correctly
	(pr_kvtable): new function, used by pr_orecord()

2002-01-29  Sam Steingold  <sds@gnu.org>

	* hashtabl.d (check_hashtable): new macro
	(GETHASH, PUTHASH, REMHASH, MAPHASH, CLRHASH)
	(HASH-TABLE-REHASH-THRESHOLD, HASH-TABLE-TEST, HASH-TABLE-ITERATOR)